# image_processor

./: CMakeLists.txt  main.c  main.cpp
include/: bitmap.h  improc.hpp  imqueue.hpp
src/: bitmap.c  improc.cpp  imqueue.cpp
test/: main_gtest.cpp  test_aux.cpp  test_improc.cpp  test_imqueue.cpp  test_io.cpp
